# hass-automation-engine

./: Dockerfile  Makefile
lib/: pyproject.toml
lib/hass_ae/: __init__.py  __main__.py  app.py  automation.py  client.py  components.py  config.py  dl.py  domain.py  entities.py  handlers.py  tmp.py
lib/hass_ae/docs/: motion_event.json  switch_event.json
lib/src/: __main__.py
lib/src/service/: client.py
src/: app.py  automation.py
