[tool.poetry]
name = "ha"
version = "0.1.0"
description = ""
authors = ["Mikael Hernrup <mikael@hernrup.se>"]

[tool.poetry.dependencies]
python = "^3.7"
asyncws = "^0.1"
websockets = "^8.1"
cachetools = "^4.1.1"

[tool.poetry.dev-dependencies]
pytest = "^4.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
